<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="History" />
    <item
        android:id="@+id/nav_quiz"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_quiz" />
    <item
        android:id="@+id/nav_history_quiz"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="Quiz History" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_profile" />

</menu>
